[gd_scene load_steps=10 format=3 uid="uid://chwb801hjixpf"]

[ext_resource type="Script" uid="uid://bv4m501ttjb5c" path="res://skrip/blok kode/kondisi.gd" id="1_0r1td"]
[ext_resource type="FontFile" uid="uid://bjum7pw4w7wu" path="res://ui/fonta/Modernpictograms-YJW8.otf" id="2_i3pwo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gj1vm"]
bg_color = Color(1, 0.687939, 0.397949, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uysqq"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c0b8"]
bg_color = Color(0, 0.992092, 0.513683, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2d18v"]
bg_color = Color(1.15514e-06, 0.75953, 0.900816, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxdm3"]
bg_color = Color(0.502719, 0.502719, 0.502719, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s8eaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xt2p4"]

[node name="jika" type="VBoxContainer"]
script = ExtResource("1_0r1td")

[node name="pemisah_vertikal" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="nilai_kondisi" type="Label" parent="pemisah_vertikal"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_gj1vm")
text = " if x == true:"

[node name="geser_keatas" type="Button" parent="pemisah_vertikal"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i3pwo")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uysqq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7c0b8")
theme_override_styles/hover = SubResource("StyleBoxFlat_2d18v")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gxdm3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s8eaw")
text = " ] "

[node name="geser_kebawah" type="Button" parent="pemisah_vertikal"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i3pwo")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uysqq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7c0b8")
theme_override_styles/hover = SubResource("StyleBoxFlat_2d18v")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gxdm3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s8eaw")
text = " [ "

[node name="lipat" type="Button" parent="pemisah_vertikal"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i3pwo")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uysqq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7c0b8")
theme_override_styles/hover = SubResource("StyleBoxFlat_2d18v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s8eaw")
text = " - "

[node name="pemisah_vertikal_2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="indentasi" type="Panel" parent="pemisah_vertikal_2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_xt2p4")

[node name="area_aksi" type="VBoxContainer" parent="pemisah_vertikal_2"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="pemisah_vertikal/geser_keatas" to="." method="geser_keatas"]
[connection signal="pressed" from="pemisah_vertikal/geser_kebawah" to="." method="geser_kebawah"]
[connection signal="pressed" from="pemisah_vertikal/lipat" to="." method="lipat"]
